--- a/Supplements.Rmd
+++ b/Supplements.Rmd
@@ -188,6 +188,7 @@ After decompression, the `.zip` can be deleted as it is no longer required.
 
 ```{r download-droplet-data}
 options(timeout = 1000)
+dir.create("downloads", showWarnings = FALSE)
 # Check whether the data was downloaded already
 if (!file.exists("downloads/rawCounts.tsv")) {
   website <- "https://www.ebi.ac.uk/"
