--- a/Workflow.Rmd
+++ b/Workflow.Rmd
@@ -558,7 +558,8 @@ For convenience, these can be obtained online at
 
 ```{r download-chain-SM}
 # Website were the files are located
-chains_website <- "https://zenodo.org/record/5243265/files/"
+chains_website <- "https://git.ecdf.ed.ac.uk/vallejosgroup/basicsworkflow2020/-/raw/master/"
+# chains_website <- "https://zenodo.org/record/5243265/files/"
 # To avoid timeout issues as we are downloading large files
 options(timeout = 1000)
 # File download
