--- a/Workflow.Rmd
+++ b/Workflow.Rmd
@@ -567,13 +567,13 @@ options(timeout = 1000)
 ## After download, files are then stored in an `rds` sub-folder 
 if (!file.exists("rds/chain_SM.Rds")) {
   download.file(
-    paste0(chains_website, "chain_SM.Rds"),
+    paste0(chains_website, "rds/chain_SM.Rds"),
     destfile = "rds/chain_SM.Rds"
   )
 }
 if (!file.exists("rds/chain_PSM.Rds")) {
   download.file(
-    paste0(chains_website, "chain_PSM.Rds"),
+    paste0(chains_website, "rds/chain_PSM.Rds"),
     destfile = "rds/chain_PSM.Rds"
   )
 }
